     3- zeta(I+2^(-64)) -> SEGV
BA   4- permorder returned incorrect results for large orders
     5- p=[4,54]; lfunmf(mfinit(p,0), mftraceform(p,0)) -> oo loop
BA   6- printf("%5.2f",M) transposed M [#2252]
     7- bnfinit instability at low accuracy. E.g., at \p38
        P=x^7+22*x^6+184*x^5+764*x^4+2020*x^3+3792*x^2+5712*x+4;
        bnfinit(P,1).no -> 4 times too large

  Added
     1- examples/pari.f90: example FORTRAN binding
     2- [libpari] quodif
BA   3- [libpari] perm_sqr, perm_powu, perm_orderu

  Changed
     1- faster intnumgaussinit + change default number of points to B/4,
        suitable when b - a ~ distance to the nearest pole
BA   2- [libpari] perm_pow now take a t_INT exponent
BA   3- [libpari] permorder and perm_order now return a t_INT.

Done for version 2.12.1 (released 16/09/2020):
  Fixed
BA   1- plotlines flag was ignored
     2- fileopen(,"w" or "a") was bypassing the check for 'secure' default
     3- bug in idealismaximal: K=nfinit(y^2+7); idealismaximal(K,[11,7;0,1])->0
     4- bnfcertify did not certify correctly its argument when DEBUGLEVEL > 1
        (\g 2 and above) and the computed class group was trivial (introduced
        in 2002, commit d3d44841). The code was correct at \g1 or \g0, and in
        all cases if the computed class group was non-trivial.
     5- nfdiscfactors(nfinit([x^2+1, [1,x]])) -> wrong result (didn't support
        inputs from nfinit([T, integer basis]))
     6- nfinit(rnf) would produce a broken nf (not supporting
        nf_get_ramified_primes)
     7- [mf,F] = mffromqf([2,0;0,2]); L=lfunmf(mf,F) => wrong values
     8- t=mfTheta();mfslashexpansion(mfinit(t),t,[0,1;-1,0],1,1) -> error
     9- poldisc(x^4 + 8/y*x) -> type error in Q_divi_to_int [#2157]
    10- T=mfTheta(); mfeval(mfinit(T),T,I/10) -> wrong sign
    11- mfslashexpansion(mf,F,huge matrix,...) -> overflow
    12- mf=mfinit([470,2],0);F=mfeigenbasis(mf)[7]; mfcuspval(mf,F,1/5)
        -> division by 0