@@ -1,5 +1,5 @@
 default(realprecision,38);
-default(parisize,"20M");
+default(parisize,"80M");
 bnf=bnfinit(x^3-2); S=idealfactor(bnf,2*3*5*7)[,1];
 B=bnfsunit(bnf,S);
 B[1]
@@ -42,3 +42,10 @@ S5=idealprimedec(L,5);
 S=concat([S2,S7,S13,S5]);
 U=bnfunits(L,S);
 foreach(U[1],u,print(bnfisunit(L,u,U)))
+
+\\ from D. Broadhurst's examples
+\pb10240
+P=x^7-22*x^6+169*x^5-568*x^4+1263*x^3-1506*x^2+2295*x+2;
+setrand(1); bnf=bnfinit(P,1);
+US=bnfunits(bnf,idealprimedec(bnf,2));
+bnfisunit(bnf,4*(x^2-18*x+85)/x^2*Mod(1,bnf.pol),US)
